Smell rimossi su tutte classi tranne MetricExtra